--- a/web/pages/static/css/about-us.css
+++ b/web/pages/static/css/about-us.css
@@ -4,7 +4,6 @@
     {
         display:flex;
         flex-direction:row;
-        justify-content:space-between;
     }
     #left-header, #right-header
     {
@@ -15,6 +14,21 @@
     {
         display:inline-block;
     }
+    #top-footer
+    {
+        display:flex;
+        flex-direction:row;
+    }
+    #top-left-footer
+    {
+        float:left;
+        text-align:left;
+    }
+    #top-right-footer
+    {
+        float:right;
+        text-align:right;
+    }
 }
 
 @media only screen and (max-width:900px) /*for tablet and phone*/
@@ -23,25 +37,25 @@
     {
         display:flex;
         flex-direction:column;
-        justify-content:space-between;
     }
     #left-header, #right-header
     {
         display:flex;
-        flex-direction:row;
+        flex-direction:column;
     }
     .menu li
     {
         display:flex;
         flex-direction:column;
     }
-    #pp
+    #top-footer
     {
-        display:none;
+        display:flex;
+        flex-direction:column;
     }
-    #top-left-footer table
+    #top-left-footer, #top-right-footer
     {
-        width:auto;
+        text-align:center;
     }
     #top-left-footer th
     {
@@ -67,6 +81,7 @@ body
 /* header */
 header
 {
+    justify-content:space-between;
     background-color:darkturquoise;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size:medium;
@@ -255,8 +270,6 @@ footer
 
 #top-footer
 {
-    display:flex;
-    flex-direction:row;
     justify-content:space-between;
     background-color:darkturquoise;
     color:black;
@@ -266,8 +279,6 @@ footer
 
 #top-left-footer
 {
-    float:left;
-    text-align:left;
     padding:5px;
     margin:5px;
 }
@@ -313,8 +324,6 @@ footer
 
 #top-right-footer
 {
-    float:right;
-    text-align:right;
     padding:5px;
     margin:5px;
 }
