--- a/web/pages/static/css/home.css
+++ b/web/pages/static/css/home.css
@@ -4,7 +4,6 @@
     {
         display:flex;
         flex-direction:row;
-        justify-content:space-between;
     }
     #left-header, #right-header
     {
@@ -15,6 +14,21 @@
     {
         display:inline-block;
     }
+    #top-footer
+    {
+        display:flex;
+        flex-direction:row;
+    }
+    #top-left-footer
+    {
+        float:left;
+        text-align:left;
+    }
+    #top-right-footer
+    {
+        float:right;
+        text-align:right;
+    }
 }
 
 @media only screen and (max-width:900px) /*for tablet and phone*/
@@ -23,21 +37,25 @@
     {
         display:flex;
         flex-direction:column;
-        justify-content:space-between;
     }
     #left-header, #right-header
     {
         display:flex;
-        flex-direction:row;
+        flex-direction:column;
     }
     .menu li
     {
         display:flex;
         flex-direction:column;
     }
-    #top-left-footer table
+    #top-footer
     {
-        width:auto;
+        display:flex;
+        flex-direction:column;
+    }
+    #top-left-footer, #top-right-footer
+    {
+        text-align:center;
     }
     #top-left-footer th
     {
@@ -63,6 +81,7 @@ body
 /* header */
 header
 {
+    justify-content:space-between;
     background-color:darkturquoise;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size:medium;
@@ -252,8 +271,6 @@ footer
 
 #top-footer
 {
-    display:flex;
-    flex-direction:row;
     justify-content:space-between;
     background-color:darkturquoise;
     color:black;
@@ -263,8 +280,6 @@ footer
 
 #top-left-footer
 {
-    float:left;
-    text-align:left;
     padding:5px;
     margin:5px;
 }
@@ -310,8 +325,6 @@ footer
 
 #top-right-footer
 {
-    float:right;
-    text-align:right;
     padding:5px;
     margin:5px;
 }
