--- a/web/pages/templates/about-us.html
+++ b/web/pages/templates/about-us.html
@@ -48,18 +48,18 @@
             </div>
         </nav>
         <article>
-            <div id="c-1" class="content">
-                <div id="content-1">
+            <div id="c" class="content">
+                <div id="c-1">
                     <h1>HAKKIMIZDA</h1>
                     <p>Bu sistem Python (Django, OpenCV), HTML ve CSS kullanılarak oluşturulmuştur.
                     </p>
                     <p>Bu oluşumu meydana getiren ekip:
                         <ul type="none">
-                            <li><img id="pp" src="{% static 'images/user.png' %}" title="" alt="ysc" width="150px" height="150px">
+                            <li><img id="pp" src="{% static 'images/user.png' %}" title="" alt="ysc" width="120px" height="120px">
                                 <span>Yavuz Selim Çoraklı</span>
                                 <a href="https://www.linkedin.com/in/yavuz-selim-corakli"><img src="{% static 'images/linkedin.png' %}" width="30px" title="" alt="linkedin"></a>
                             </li>
-                            <li><img id="pp" src="{% static 'images/user.png' %}" title="" alt="mo" width="150px" height="150px">
+                            <li><img id="pp" src="{% static 'images/user.png' %}" title="" alt="mo" width="120px" height="120px">
                                 <span>Mustafa Oğur</span>
                                 <a href="https://www.linkedin.com/in/"><img src="{% static 'images/linkedin.png' %}" width="30px" title="" alt="linkedin"></a>
                             </li>
