--- a/web/pages/templates/home.html
+++ b/web/pages/templates/home.html
@@ -48,26 +48,20 @@
             </div>
         </nav>
         <article>
-            <div id="c-1" class="content">
-                <div id="content-1">
-                    <span>
-                        <h1>Çalışma Alanlarının Verimliliği İçin Akıllı İzleme Sistemi</h1>
-                        <p>
-                            Bu sistem sayesinde kütüphane, sınıf gibi çalışma alanlarında yer izleme yaparak verimliliği yükseltebilirsiniz!
-                        </p>
-                    </span>
+            <div id="c" class="content">
+                <div id="c-1">
+                    <h1>Çalışma Alanlarının Verimliliği İçin Akıllı İzleme Sistemi</h1>
+                    <p>
+                        Bu sistem sayesinde kütüphane, sınıf gibi çalışma alanlarında yer izleme yaparak verimliliği yükseltebilirsiniz!
+                    </p>
                 </div>
-            </div>
-            <div id="c-2" class="content">
-                <div id="content-2">
-                    <span>
-                        <h2>Avantajı dezavantajından fazla!</h2>
-                        <ul>
-                            <li>Kolay</li>
-                            <li>Hızlı</li>
-                            <li>Rahat</li>
-                        </ul>
-                    </span>
+                <div id="c-2">
+                    <h2>Avantajı dezavantajından fazla!</h2>
+                    <ul>
+                        <li>Kolay</li>
+                        <li>Hızlı</li>
+                        <li>Rahat</li>
+                    </ul>
                 </div>
             </div>
         </article>
