--- a/web/pages/static/css/workplace_edit.css
+++ b/web/pages/static/css/workplace_edit.css
@@ -217,7 +217,7 @@ article
 .content
 {
     justify-items:center;
-    max-width:540px;
+    height:100vh;
     padding:2px;
     margin:2px auto;    
 }
