--- a/web/pages/static/css/signup.css
+++ b/web/pages/static/css/signup.css
@@ -41,7 +41,7 @@ body
     margin:5px;
 }
 
-.system-signup input
+.system-signup input, .system-signup select
 {
     width:100%;
     height:100%;
@@ -53,6 +53,11 @@ body
     font-size:16px;
     color:linen;
     padding:10px;
+}
+
+.system-signup select option
+{
+    color:black;
 }
 
 .system-signup span
